add irm datatable css

--- a/app/views/layouts/setting.html.erb
+++ b/app/views/layouts/setting.html.erb
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="/themes/default/stylesheets/form.css"></link>
   <link rel="stylesheet" type="text/css" href="/themes/default/stylesheets/button.css"></link>
   <link rel="stylesheet" type="text/css" href="/themes/default/stylesheets/container.css"></link>
+  <link rel="stylesheet" type="text/css" href="/themes/default/stylesheets/table.css"></link>
   <link rel="stylesheet" type="text/css" href="/themes/default/stylesheets/other.css"></link>
   <link rel="stylesheet" type="text/css" href="/themes/default/stylesheets/icons.css"></link>
   <script type="text/javascript">
