irm-datatable width=100%

--- a/public/themes/default/stylesheets/table.css
+++ b/public/themes/default/stylesheets/table.css
@@ -3,6 +3,7 @@
     margin:0;padding:0;
     font-family:arial;font-size:inherit;
     border-collapse:separate;*border-collapse:collapse;border-spacing:0; /* since ie6 and ie7 behave differently */
+    width:100%;
     /*border:1px solid #7F7F7F;*/
 }
 .irm-datatable thead {border-spacing:0;} /* for safari bug */
