--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -37,7 +37,7 @@
                    {:key=>"entry_title",:label=>t(:label_skm_entry_header_title), :searchable => true,:formatter=>"Y.irm.template"},
                    {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "180px"},
                    {:key=>"is_favorite", :hidden => true}],
-                   {:search_box => "entryHeadersSearchBox", :paginator_box => "entry_headers_list_paginator_box", :not_load => true })%>
+                   {:search_box => "entryHeadersSearchBox", :paginator_box => "entry_headers_list_paginator_box", :view_filter => true })%>
         <div id="entry_headers_list_paginator_box"></div>
       </div>
     </div>
