--- a/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -25,6 +25,6 @@
                                { :key => "requested_name", :label => t(:label_icm_incident_request_requested_by,:searchable=>true) },
                                { :key => "last_request_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" },
                                { :key => "external_system_name", :label => t(:label_irm_external_system),:width=>"180px" }
-                               ],{:export_data=>"#incidentRequestExport",:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox'})%>
+                               ],{:export_data=>"#incidentRequestExport",:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox',:view_filter=>true})%>
         <div id="incidentRequestsPaginatorBox"></div>
 </div>
