--- a/app/views/layouts/common.html.erb
+++ b/app/views/layouts/common.html.erb
@@ -2,11 +2,10 @@
 <html>
 <head>
   <%= render :partial => "irm/common/application_title" %>
-
-  <script type="text/javascript" src="/javascripts/yui3.3/yui/yui-min.js"></script>
-  <%= javascript_include_tag :defaults %>
+  <% require_javascript([:jquery,:jplugin]) %>
+  <% require_css([:default]) %>
+  <%=render_loaded_javascript_css_files%>
   <%= csrf_meta_tag %>
-  <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/login.css"></link>
   <%= render :partial => "irm/common/address_bar_logo" %>
 </head>
  <%= yield %>
