--- a/app/views/layouts/uid.html.erb
+++ b/app/views/layouts/uid.html.erb
@@ -1,22 +1,13 @@
 <html>
 <head>
   <title>Ironmine</title>
-
-  <script type="text/javascript" src="/javascripts/yui3.3/yui/yui-min.js"></script>
-  <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "tabbar_ext" %>
-  <%= javascript_include_tag "survey" %>
+  <% require_javascript([:jquery,:jplugin]) %>
+  <% require_css([:default]) %>
+  <%=render_loaded_javascript_css_files%>
   <%= csrf_meta_tag %>
-  <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/application.css"></link>
-  <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/common.css"></link>
-  <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/tabbar.css"></link>
-  <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/icons.css"></link>
-
   <script type="text/javascript">
-    GY.use("menubutton","node-base",function(Y){
-      Y.on("domready",function(){
-        new Y.MenuButton({menuNode:"#settingMenu",dropAlign:["TR","BR"]});
-      });
+    $(document).ready(function(){
+        $("#settingMenu").menubutton();
     });
   </script>
   <link rel="shortcut icon" href="/images/mini-logo.png" type="image/x-icon"/>
