--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -40,29 +40,10 @@
     </div>
 </div>
 
-<% if allow_to_function?(:view_reports) %>
+<% #if allow_to_function?(:view_reports) %>
 
-<% end %>
+<% #end %>
 
 <% content_for :sidebar do%>
     <%= render :partial =>"/icm/incident_requests/short_cut_new" %>
 <% end %>
-
-
-<script type="text/javascript">
-  GY.use("tabview","node-event-simulate",function(Y){
-    Y.one("#templateBody").setStyle("display","block");
-    var tabview = new Y.TabView({srcNode:'#templateBody',tabIndex:"#kanban"});
-    tabview.render();
-    var currentTab = Y.one("#templateBody").getAttribute("current");
-    Y.one("#templateBody").one("a#"+currentTab).simulate("click");
-    Y.on("change", change_to_grid_tab, "#incident_requestsViewFilter");
-  });
-
-  //点击filter时，切换到列表视图
-  function change_to_grid_tab(e){
-      GY.use("node", function(Y){
-        Y.one("a[id='grid']").simulate("click");
-      });
-  }
-</script>
