--- a/public/themes/default/stylesheets/base.ie6.css
+++ b/public/themes/default/stylesheets/base.ie6.css
@@ -1,3 +1,7 @@
+#body{
+    margin: 0;
+}
+
 #mc_l, #mc_r {
     background:url("../images/motifCurve_sprite.png") no-repeat scroll 0 0 transparent;
     height:9px;
@@ -25,11 +29,8 @@ body .page-body #bd_r {
 }
 
 body .page-body {
-    background-color: #FFFFFF;
-    margin-bottom: 0;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 0;
+    background-color: transparent;
+    margin: 0;
 }
 
 .page-body {
@@ -37,9 +38,8 @@ body .page-body {
 }
 
 #motifCurve {
-    background-image:url("../images/motifCurve_sprite.png");
-    background-repeat:repeat-x;
-    height:9px;
+    background-color: #1797c0;
+    height:4px;
     margin:0 -5px;
     position:relative;
 }
@@ -52,18 +52,21 @@ body .page-body #bd_b {
     width:100%;
 }
 body .page-body #bd_b #bd_bl {
-    background-position:-40px top;
-    left:-20px;
-    z-index:11;
+    /*background-position:-40px top;*/
+    /*left:-20px;*/
+    /*z-index:11;*/
+    display: none;
 }
 body .page-body #bd_b #bd_br {
-    background-position:-60px top;
-    right:-20px;
+    /*background-position:-60px top;*/
+    /*right:-20px;*/
+    display: none;
 }
 #bd_bl, #bd_br {
-    background:url("../images/bd_sprite.png") no-repeat scroll 0 0 transparent;
-    height:20px;
-    position:absolute;
-    width:20px;
+    /*background:url("../images/bd_sprite.png") no-repeat scroll 0 0 transparent;*/
+    /*height:20px;*/
+    /*position:absolute;*/
+    /*width:20px;*/
+    display: none;
 }
 /*********************************************************************************/
