--- a/public/themes/default/stylesheets/layout.ie6.css
+++ b/public/themes/default/stylesheets/layout.ie6.css
@@ -1,7 +1,3 @@
-#body{
-    margin: 0 10px 0 10px;
-}
-
 .lay-default #contentWrapper {
     min-width: 100%;
 }
@@ -9,11 +5,13 @@
 .lay-default #bodyColA {
     float:left;
     width:210px;
+    display:inline-block;
 }
 
 .lay-default #bodyColB {
-    display:block;
+    display:inline-block;
     margin: 0 0 0 210px;
+    padding-right: 10px;
 }
 
 .lay-default #bodyColC {
