--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -24,7 +24,10 @@
                 <tr>
                   <td colspan="2">
                     <div class="tools-content-right">
-                      <%= render :partial => "irm/bulletins/bulletin_portlet" %>
+                      <%# render :partial => "irm/bulletins/bulletin_portlet" %>
+                      <%require_javascript(:extjs) %>
+                      <%require_css(:extjs) %>
+                      <div id="editor"></div>
                     </div>
                   </td>
                 </tr>
@@ -63,3 +66,13 @@
     <%= render :partial =>"/icm/incident_requests/short_cut_new" %>
     <%= render :partial =>"/irm/common/recently_objects" %>
 <% end %>
+<script type="text/javascript">
+Ext.onReady(function(){
+   Ext.create('Ext.form.HtmlEditor', {
+    height: 250,
+    autoWidth:true,
+    renderTo: Ext.get("editor")
+   });
+});
+
+</script>
